[gd_scene load_steps=16 format=3 uid="uid://bywrdjiurayct"]

[ext_resource type="Script" uid="uid://bb1b4n2pur4i0" path="res://scripts/managers/input_listener.gd" id="1_ftvu5"]
[ext_resource type="Texture2D" uid="uid://cjc248508locs" path="res://assets/backgrounds/arena2.png" id="1_irk3j"]
[ext_resource type="PackedScene" uid="uid://ce1cfkpg1oapd" path="res://scenes/Player1.tscn" id="2_0yex5"]
[ext_resource type="PackedScene" uid="uid://c8rlmnvaxhyuc" path="res://scenes/Player2.tscn" id="3_bsu3s"]
[ext_resource type="PackedScene" uid="uid://brt8asynsnb14" path="res://scenes/Enemy.tscn" id="4_sdfhe"]
[ext_resource type="Script" uid="uid://smu7o2wlaelw" path="res://scripts/managers/TurnManager.gd" id="5_hrc4b"]
[ext_resource type="PackedScene" uid="uid://ch4juq0gsqhm0" path="res://scenes/ui/ResultOverlay.tscn" id="6_a4ns4"]
[ext_resource type="PackedScene" uid="uid://ct511gfryly8b" path="res://scenes/ui/PauseOverlay.tscn" id="6_irk3j"]
[ext_resource type="Texture2D" uid="uid://c0gjtifwjdhty" path="res://assets/ui/QTE.png" id="6_sdfhe"]
[ext_resource type="Script" uid="uid://ceb3t4pnexfbv" path="res://scenes/ui/ResultOverlay.gd" id="7_7acxt"]
[ext_resource type="AudioStream" uid="uid://6diuvpafafnp" path="res://assets/music/bgm.mp3" id="7_bsu3s"]
[ext_resource type="Script" uid="uid://rv08adbymf0w" path="res://scenes/ui/PauseOverlay.gd" id="7_l1ooa"]
[ext_resource type="Script" uid="uid://di7rn5ua3w270" path="res://scenes/BattleCamera.gd" id="9_hrc4b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irk3j"]
bg_color = Color(0, 0, 0, 0.47451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgm0l"]
bg_color = Color(0.8, 0, 0, 1)

[node name="BattleScene" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(572, 319)
scale = Vector2(0.747396, 0.628906)
texture = ExtResource("1_irk3j")

[node name="InputListener" type="Node" parent="."]
script = ExtResource("1_ftvu5")

[node name="Player1" parent="." instance=ExtResource("2_0yex5")]
position = Vector2(134, 233)

[node name="Player2" parent="." instance=ExtResource("3_bsu3s")]
position = Vector2(136, 392)

[node name="Enemy" parent="." instance=ExtResource("4_sdfhe")]
position = Vector2(939, 199)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="PauseOverlay" parent="UILayer" instance=ExtResource("6_irk3j")]
visible = false
script = ExtResource("7_l1ooa")

[node name="Panel" type="Panel" parent="UILayer/PauseOverlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PauseOverlay"]
layout_mode = 0
offset_left = 408.0
offset_top = 402.0
offset_right = 708.0
offset_bottom = 495.0

[node name="Title" type="Label" parent="UILayer/PauseOverlay/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="UILayer/PauseOverlay/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="UILayer/PauseOverlay/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="UILayer/PauseOverlay/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Quit"

[node name="ResultOverlay" parent="UILayer" instance=ExtResource("6_a4ns4")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_7acxt")

[node name="Panel" type="Panel" parent="UILayer/ResultOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_irk3j")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ResultOverlay/Panel"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 0
offset_left = 406.0
offset_top = 376.0
offset_right = 706.0
offset_bottom = 576.0

[node name="Title" type="Label" parent="UILayer/ResultOverlay/Panel/VBoxContainer"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="UILayer/ResultOverlay/Panel/VBoxContainer"]
layout_mode = 2
text = "You Win!"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="UILayer/ResultOverlay/Panel/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="UILayer/ResultOverlay/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitButton" type="Button" parent="UILayer/ResultOverlay/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Quit"

[node name="FlashLayer" type="ColorRect" parent="UILayer"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QTEContainer" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QTECircle" type="Sprite2D" parent="UILayer/QTEContainer"]
visible = false
position = Vector2(555, 306)
scale = Vector2(0.156, 0.156)
texture = ExtResource("6_sdfhe")

[node name="QTEText" type="Label" parent="UILayer/QTEContainer"]
visible = false
layout_mode = 0
offset_left = 479.0
offset_top = 377.0
offset_right = 656.0
offset_bottom = 421.0
text = "GUSTAVE!! PARRY IT (X)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QTEPressureBar" type="ProgressBar" parent="UILayer/QTEContainer"]
visible = false
layout_mode = 0
offset_left = 654.0
offset_top = 175.0
offset_right = 699.0
offset_bottom = 451.0
theme_override_styles/fill = SubResource("StyleBoxFlat_sgm0l")
fill_mode = 2

[node name="QTEWidget" type="Control" parent="UILayer/QTEContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionMenu" type="VBoxContainer" parent="UILayer"]
offset_left = 474.0
offset_top = 495.0
offset_right = 643.0
offset_bottom = 561.0

[node name="AttackButton" type="Button" parent="UILayer/ActionMenu"]
layout_mode = 2
text = "\"Attack\""

[node name="SkillsButton" type="Button" parent="UILayer/ActionMenu"]
layout_mode = 2
text = "\"Skills\""

[node name="TurnLabel" type="Label" parent="UILayer"]
offset_left = 366.0
offset_top = 546.0
offset_right = 447.0
offset_bottom = 569.0
text = "Turn: --"

[node name="EnemyHUD" type="VBoxContainer" parent="UILayer"]
offset_left = 884.0
offset_top = 580.0
offset_right = 942.0
offset_bottom = 620.0

[node name="EnemyHPBar" type="ProgressBar" parent="UILayer/EnemyHUD"]
custom_minimum_size = Vector2(250, 25)
layout_mode = 2
fill_mode = 1
show_percentage = false

[node name="EnemyHPLabel" type="Label" parent="UILayer/EnemyHUD"]
layout_mode = 2
text = "BOSS HP: 100"
horizontal_alignment = 1

[node name="HPBars" type="VBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -482.5
offset_top = 245.0
offset_right = -320.5
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player1HP" type="Label" parent="UILayer/HPBars"]
layout_mode = 2
text = "SWORD SPIRIT: 50/50"

[node name="Player2HP" type="Label" parent="UILayer/HPBars"]
layout_mode = 2
text = "GUN GIRL: 50/50"

[node name="SkillsMenu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 650.0
offset_top = 495.0
offset_right = 815.0
offset_bottom = 561.0

[node name="TwoCutButton" type="Button" parent="UILayer/SkillsMenu"]
visible = false
layout_mode = 0
offset_right = 165.0
offset_bottom = 40.0
text = "2x Cut"

[node name="BigShotButton" type="Button" parent="UILayer/SkillsMenu"]
visible = false
layout_mode = 0
offset_top = 20.0
offset_right = 165.0
offset_bottom = 60.0
text = "BigShot"

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("5_hrc4b")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bsu3s")
volume_db = -6.19
autoplay = true
parameters/looping = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="BattleCamera" type="Camera2D" parent="."]
position = Vector2(568, 321)
script = ExtResource("9_hrc4b")
